button styling + fixed buttons not showing at the right times by changing checkbutton function

--- a/P1TicketReimbursement/src/main/webapp/style.css
+++ b/P1TicketReimbursement/src/main/webapp/style.css
@@ -4,7 +4,7 @@ body{
 
 
 .hidden {
-  display:block;
+  display:none;
   transform: scale(0);
 
 
